# android_fc_app

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/pp/facerecognizer/: Classifier.java  MainActivity.java
app/src/main/java/pp/facerecognizer/align/: FacePreprocess.java
app/src/main/java/pp/facerecognizer/context/: MyApplication.java
app/src/main/java/pp/facerecognizer/detection/: MTCNN.java
app/src/main/java/pp/facerecognizer/env/: FileUtils.java
app/src/main/java/pp/facerecognizer/recognition/: FacePredictor.java  MobileFace.java  MxNetUtils.java
app/src/main/java/pp/facerecognizer/search/: Search.java
app/src/main/java/pp/facerecognizer/tracking/: MultiBoxTracker.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/face_align/: CMakeLists.txt  FacePreprocess.h  JniFacePreprocess.cpp
app/src/main/jni/opencv/jni/: OpenCVConfig.cmake  OpenCVModules_arm64_v8a.cmake  OpenCVModules_armeabi.cmake  OpenCVModules_armeabi_v7a.cmake  OpenCVModules_mips.cmake  OpenCVModules_mips64.cmake  OpenCVModules_x86.cmake  OpenCVModules_x86_64.cmake
app/src/main/jni/opencv/jni/include/opencv2/: videoio.hpp
app/src/main/jni/opencv/jni/include/opencv2/core/cuda/: simd_functions.hpp
app/src/main/jni/tensorflow_demo/object_tracking/: config.h  image_data.h  keypoint_detector.h  object_detector.h  object_model.h  object_tracker.cc  object_tracker.h  optical_flow.cc  tracked_object.h
app/src/main/res/layout/: activity_camera.xml  camera_connection_fragment_tracking.xml
